<resources>
    <string name="app_name">NavigationProjectMP06</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_2">Button 2</string>
    <string name="button_1">Button 1</string>
    <string name="button_3">Button 3</string>
    <string name="img3">Image 3</string>
    <string name="img1">Image 1</string>
    <string name="img2">Image 2</string>
    <string name="placeholder">PlaceHolder</string>
    <string name="textview">TextView</string>
</resources>